2007-08-06  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-behaviour-depth.c:
	Modify to work like all other behvaiours in not forcing
	increasing order in behaviour 'limits'. (#436)
	Rename limit min/max props to start/end.

	* tests/test-depth.c:
	Simplify test-case to work with above change and 
	without multiple ramps

	* clutter/clutter-behaviour-rotate.c:
	Handle CW rotation when end > start and similar for CCW just
	like ellipse behaviour. 

2007-08-05  Matthew Allum  <mallum@openedhand.com>

	* README:
	* clutter/clutter-actor.c:
	Document show/hide_all behaviour correctly.

2007-08-05  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-depth.c: Fix typo in the description.

2007-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-depth.c: Clarify the depth behaviour
	even more in the description used by the API reference.

2007-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-depth.[ch]: Clarify that what drives
	the movement along the Z axis is the ClutterAlpha object (we
	don't have the luxury of a rollover like the opacity does);
	so, if you want to go from 0 to -100 you have to use a
	decreasing function, just as well if you want to go from 100
	to 0. Using a min-depth of 100 and a max-depth of 0 and an
	increasing function is undefined behaviour.

	* tests/Makefile.am:
	* tests/test-depth.c: Add a test case for the depth behaviour.

2007-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c (clutter_actor_set_opacity): Queue
	a redraw when setting the opacity of an actor.

2007-08-03  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-ellipse.c:
	(clutter_behaviour_ellipse_get_angle_tilt): Avoid recursion
	by fixing a typo.

	(clutter_behaviour_ellipse_get_angle_begin),
	(clutter_behaviour_ellipse_get_angle_end): Correct the angles
	here too.

2007-08-03  Emmanuele Bassi  <ebassi@openedhand.com>
